--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,11 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0'
+    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
     testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0'
-    testImplementation 'org.koin:koin-test:2.0.1'
     testImplementation 'org.mockito:mockito-core:3.8.0'
+    testImplementation 'io.insert-koin:koin-test:2.0.1'
+    androidTestImplementation 'io.insert-koin:koin-test:2.0.1'
 }
